--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Dog Rescue</title>
+    <title>The Pet Network | Home</title>
     <!-- CUSTOM CSS STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- GOOGLE FONTS -->
@@ -29,8 +29,8 @@
     <!-------NAVIGATION-------->
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">home</a>
-            <a href="#">about</a>
+            <a href="index.html">home</a>
+            <a href="about.html">about</a>
             <a href="#">adopt</a>
             <a href="#">sign up</a>
     </div>
