animation added to adopt title

--- a/adopt.html
+++ b/adopt.html
@@ -38,7 +38,7 @@
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
         
     <div class="adopt-header">
-        <h1 id="adopt-title">Adopt a Dog</h1>
+        <h1 id="adopt-title" class="animated infinite pulse slower">Adopt a Dog</h1>
     </div>
         
     <div class="grid-container" id="dog-grid">
