--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="index.html">home</a>
             <a href="about.html">about</a>
-            <a href="#">adopt</a>
+            <a href="adopt.html">adopt</a>
             <a href="#">sign up</a>
     </div>
     
