--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="index.html">home</a>
             <a href="about.html">about</a>
             <a href="adopt.html">adopt</a>
-            <a href="#">sign up</a>
+            <a href="signup.html">sign up</a>
     </div>
     
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
