--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- CUSTOM CSS STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- GOOGLE FONTS -->
-    <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto|Itim" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Montserrat|Itim" rel="stylesheet">
     
     <!-- ANIMATE CSS STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="animate.css">
