--- a/about.html
+++ b/about.html
@@ -39,5 +39,12 @@
         <div class="about-header">
             <h1 id="aboutus-title">About Us</h1>
         </div>
+        
+        <div class="blockquote-wrapper">
+    <div class="blockquote">
+    <h1>You can't change a rescue's <span style="color:#e74848">past</span>, but you can change their <span style="color:#e74848">future.</span>
+     </h1>
+  </div>
+</div>
     </body>
 </html>
