--- a/adopt.html
+++ b/adopt.html
@@ -57,7 +57,7 @@
             </ul> <br> 
             <strong>Rescue charity: The Doggie Sanctuary</strong>
         </div>
-        <div class="grid-item">Find Out More</div>  
+        <div class="grid-item" id="findout-btn">Find Out More</div>  
         
         <div class="grid-item">
         <span id="pet-name">Lola</span>
