change css files

--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Pet Network | About</title>
     <!-- CUSTOM CSS STYLESHEET -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Montserrat|Itim" rel="stylesheet">
     
     <!-- ANIMATE CSS STYLESHEET -->
-    <link rel="stylesheet" type="text/css" href="animate.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     
     <script>
         //NAV JAVASCRIPT//
