--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <a href="index.html">home</a>
             <a href="about.html">about</a>
             <a href="adopt.html">adopt</a>
-            <a href="sign-up.html">sign up</a>
+            <a href="signup.html">sign up</a>
     </div>
     
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
