--- a/signup.html
+++ b/signup.html
@@ -71,7 +71,7 @@
 
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
-        <a href="#"><button type="submit" class="signupbtn">Sign Up</button></a>
+        <a href="signup2.html"><button type="submit" class="signupbtn">Sign Up</button></a>
     </div>
   </div>
 </form>
