new paragraph in index

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-------- ABOUT SECTION ------->
     <div class="about">
         <h2 id="about-title">About Us</h2>
-        <p>This is a platform for various animal charities to advertise the animals currently up for adoption and where you can inquire to meet up with your desired pet. We have a wide variety of pets on the Pet Network and recommend you different pets we think best suit your needs and life style.</p>
+        <p>The Pet Network is a place where different animal charities can advertise what rescues they currently have in their care. The aim of this website is to make it easier for charities to show what dogs/cats they have up for rehoming and also make it easier for users to see what dogs needs homes in their area.</p>
         
         <p>This is a platform for various animal charities to advertise the animals currently up for adoption and where you can inquire to meet up with your desired pet. We have a wide variety of pets on the Pet Network and recommend you different pets we think best suit your needs and life style.</p>
         
