--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      </div>
         
     <div class="slideshow">
-        <h2 id="slideshow-title">Dogs currently looking for a home...</h2>
+        <h2 id="slideshow-title">Pets currently looking for a home...</h2>
             
         <!------ SLIDESHOW ------>
         <div class="slideshow-container">
