--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
         
     <div id="img-about">
-        <img src="images/about-image.jpg">
+        <img src="images/index-dog.jpg" style="max-width:100%;">
      </div>
         
     <div class="slideshow">
