--- a/adopt.html
+++ b/adopt.html
@@ -169,7 +169,8 @@
             <li>Breed: Crossbreed</li>
             <li>Can be rehomed with dogs</li>
             <li>Can be a bit grumpy sometimes!</li>
-            </ul> </div>
+            </ul>
+        <strong>Rescue charity: Furever Homes</strong></div>
         <div class="grid-item misty">
             <button class="btn btn-3 btn-3d icon-heart-2">Find Out More</button>
         </div>
@@ -180,7 +181,15 @@
             <br>
         <img src="images/cat1-small.jpg">
         </div>
-        <div class="grid-item ruby" class="pet-info">3 Years old.<br> Maine Coon</div>
+        <div class="grid-item ruby" class="pet-info"><ul>
+            <li>Ruby is a lively cat that loves to play.</li>
+            <li>6 Years Old</li>
+            <li>Breed: Maine Coon</li>
+            <li>Can be rehomed with dogs</li>
+            <li>Doesn't get on well with children</li>
+            </ul>
+            <strong>Rescue charity: The Cat Sanctuary</strong>
+        </div>
         <div class="grid-item ruby">
             <button class="btn btn-3 btn-3d icon-heart-2">Find Out More</button>  
         </div>
